@@ -1,3 +1,9 @@
+Tue Mar 31 00:32:04 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* test/fiddle/test_handle.rb (test_NEXT): use -test-/dln/empty
+	  which is always a shared object and is not used by others.
+	  [ruby-dev:48629] [Bug #10384]
+
 Tue Mar 31 00:18:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* parse.y (primary): empty parentheses at cmdarg can be null.
